checkin temp changes

--- a/source/DasBlog.Web.UI/Config/siteSecurity.config
+++ b/source/DasBlog.Web.UI/Config/siteSecurity.config
@@ -6,7 +6,8 @@
       <Ask>true</Ask>
       <EmailAddress>myemail@myemail.com</EmailAddress>
       <DisplayName>Admin Name</DisplayName>
-      <OpenIDUrl>http://www.example.com/blog/</OpenIDUrl>
+      <!--<OpenIDUrl>http://localhost:5001/blog/</OpenIDUrl>-->
+      <OpenIDUrl>http://susilkumarjblog.net/blog/</OpenIDUrl>
       <NotifyOnNewPost>true</NotifyOnNewPost>
       <NotifyOnAllComment>true</NotifyOnAllComment>
       <NotifyOnOwnComment>true</NotifyOnOwnComment>
